Fix bug where CoC text was clipped on 768px+ sized viewports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,5 +23,12 @@
     position: relative;
     width: 60%;
     padding-top: 50px;
+    padding-bottom: 225px;
+  }
+}
+
+@media(min-width: 992px) {
+  .main-section.right {
+    padding-bottom: 175px;
   }
 }
